Fixed more layout issues

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,35 +30,6 @@ body {
   margin: 10px;
 }
 
-
-/* DRAWER */
-body {
-  display: flex;
-  height: 100vh;
-}
-
-.mdc-drawer-app-content {
-  flex: auto;
-  overflow: auto;
-  position: relative;
-}
-
-.main-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: auto;
-  height: 100%;
-}
-
-.app-bar {
-  position: absolute;
-}
-
-.mdc-top-app-bar {
-  z-index: 7;
-}
-
 /* CUSTOM */
 .lab-button--fullwidth {
   width: 100%;
